# tftp_embedded_nal

./: Cargo.toml  write_into.txt
client/: Cargo.toml
client/src/: lib.rs  main.rs
message/: Cargo.toml
message/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
tftp_embedded_nal/: Cargo.toml
tftp_embedded_nal/src/: client.rs  lib.rs  message.rs  server.rs
