[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
ascii = "1"
tftp = { git = "https://github.com/ivan770/tftp" }
nb = "1"
#heapless = "0.7.16"
#enumn = "0.1"
#displaydoc = "0.2"
