[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tftp_embedded_nal = { path = "../tftp_embedded_nal"}
ascii = "1"
embedded-nal = "0.6.0"
std-embedded-nal = "0.1.3"
nb = "1"
heapless = "0.7.16"
